# DP

./: attack.ps1
client-kafka/: prereqs.ps1  pyproject.toml
client-kafka/client_kafka/: app.py  run.py
core/client/: pyproject.toml
core/client/client/: app.py  run.py
core/client/client/general/: utils.py
core/server/: check.sh  collector.py  pyproject.toml  requirements.txt  spec_analysis.py  wrapper_echoShell.py
core/server/iASTD/: ASTD_arrow.ml  ASTD_astd.ml  ASTD_astd.mli  ASTD_attribute.mli  ASTD_constant.ml  ASTD_constant.mli  ASTD_event.mli  ASTD_label.ml  ASTD_main.ml  ASTD_parser_rules.mly  ASTD_plugin_builder.mli  ASTD_wrapper_generator.ml  ASTD_wrapper_generator.mli  Makefile  cap_server.py  config.yaml  func_tests.py  merlin-init.sh  spectransform.py
core/server/iASTD/_build/: ASTD_attribute.cmo  ASTD_label.cmo  ASTD_state.cmo  ASTD_variable.cmo
core/server/iASTD/test/: sim.py  test.spec
core/server/server/: app.py  collector.py  collector_kafka.py  manager.py  run.py  spec_analysis.py
core/server/server/general/: utils.py
core/server/server/iASTD/: ASTD_action.mli  ASTD_environment.ml  ASTD_event.ml  ASTD_functions.ml  ASTD_functions.mli  ASTD_guard.mli  ASTD_main.cmi  ASTD_parser.mli  ASTD_plugin_interfaces.ml  ASTD_state.ml  ASTD_static_kappa_indirect.ml  ASTD_term.ml  ASTD_term.mli  ASTD_transition.mli  ASTD_variable.ml  ASTD_variable.mli  cap_server.py  cap_server_old.py  event_defs.json  session_parser.py  spectransform.py  xASTD
core/server/server/wrapper/: wrapper.py  wrapper_echoShell.py  wrapper_iASTD.py
core/server/tests/: test_app.py  test_collector.py  test_main.py  test_manager.py  test_wrapper.py
server/: .flake8  pyproject.toml
server/server/: app.py  collector_kafka.py  manager.py
server/server/iASTD/: .depend
server/server/iASTD/_build/: ASTD_action.cmo  ASTD_arrow.cmo  ASTD_constant.cmo  ASTD_exec_first_hash.cmo  ASTD_parser.cmi
server/server/iASTD/spec/: global_functions.ml
(+342 files in other folders)
