[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Matus-Abrhan <xabrhan@stuba.sk>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
pexpect = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "server.run:run"
